tests/fixtures/errors/invalid_else_inside_loop_group.puml
@startuml
loop retry
  A -> B : ping
else fallback
  A -> B : pong
end
@enduml
